oop_mro/tests/trybuild/fail_override_signature_mismatch.stderr
error: method `speak` does not satisfy the virtual signature declared in `Animal`
  --> tests/trybuild/fail_override_signature_mismatch.rs:12:20
   |
12 |         virtual fn speak(&self) -> usize {
   |                    ^^^^^
